--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 tomcat8 (8.0.38-2) UNRELEASED; urgency=medium
 
   * Team upload.
+  * CVE-2016-1240 follow-up: Fixed a race condition in the init.d script
+    that could be exploited to make any existing file writable by the tomcat
+    user. Thanks to Paul Szabo for the report and the fix.
   * Install the extra jar catalina-jmx-remote.jar (Closes: #762916)
   * Added the new libtomcat8-embed-java package containing the libraries
     for embedding Tomcat into other applications.
