--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+tomcat8 (8.0.14-1+deb8u4) UNRELEASED; urgency=medium
+
+  * CVE-2016-1240 follow-up: Fixed a race condition in the init.d script
+    that could be exploited to make any existing file writable by the tomcat
+    user. Thanks to Paul Szabo for the report and the fix.
+
+ -- Emmanuel Bourg <ebourg@apache.org>  Sat, 12 Nov 2016 00:34:05 +0100
+
 tomcat8 (8.0.14-1+deb8u3) jessie-security; urgency=high
 
   * Team upload.
