--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,13 @@ tomcat8 (8.0.14-1+deb8u5) UNRELEASED; urgency=medium
     interpretation, to inject data into the HTTP response. By manipulating the
     HTTP response the attacker could poison a web-cache, perform an XSS attack
     and/or obtain sensitive information from requests other then their own.
+  * Fixed CVE-2016-8735: The JmxRemoteLifecycleListener was not updated to take
+    account of Oracle's fix for CVE-2016-3427. Therefore, Tomcat installations
+    using this listener remained vulnerable to a similar remote code execution
+    vulnerability. This issue has been rated as important rather than critical
+    due to the small number of installations using this listener and that it
+    would be highly unusual for the JMX ports to be accessible to an attacker
+    even when the listener is used.
   * Backported the fix for upstream bug 57377: Remove the restriction that
     prevented the use of SSL when specifying a bind address for the JMX/RMI
     server. Enable SSL to be configured for the registry as well as the server.
